--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         </div>
         </div>
        </div>
-       <div class="about">
+<!--        <div class="about">
          <div class="my_info">
            <h1>ABOUT ME</h1>
            <div class="details">
@@ -30,7 +30,7 @@
           </div>
 
          </div>
-       </div>
+       </div> -->
 <script src="./script.js"></script>
 
 </body>
