--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="wrapper">
       <img src="./mf-avatar.svg" >
         <h1>Sewak Gautam<span class="dot">.</span></h1>
-        <p>Jack of All Master of None</p>
+        <p>Jack of All Master of None specialized on Nodejs</p>
         <div class="icons">
           <a href="https://www.linkedin.com/in/sewakgtm/"><i class="fa fa-linkedin"></i></a>
           <a href="https://www.github.com/sewakgautam"><i class="fa fa-github-alt"></i></a>
